--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+.mainPage {
+  font-family: 'Roboto', sans-serif;
+}
+
+.nav {
+  display: flex;
+  padding: 10px 15px;
+  border-bottom: 2px solid #10A1E5;
+}
+
+.nav div {
+  flex: 1;
+  max-width: 15%;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.itemList {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .item {
-  width: 30%;
+  padding: 10px 15px;
+  flex: 1 1 100%;
+  height: 100px;
+  display: grid;
+  /*gap: 5px;*/
+  grid-template-columns: repeat(100, 1fr);
+  border-bottom: 1px solid rgba(1, 1, 1, 0.2);
 }
 
 .picture {
-  aspect-ratio: 1.5 / 1;
-  width: 100%;
-  background-size: cover;
+  grid-column: 1 / 10;
+  grid-row: span 3;
+  margin-right: 5px;
+  height: 100px;
+  width: 150px;
+  background-size: contain;
   background-repeat: no-repeat;
+}
+
+.name, .description {
+  grid-column: 10 / 85;
+  margin-left: 5px;
+}
+
+.name {
+  font-weight: bold;
+}
+
+.price, .addButton {
+  grid-column: 85 / 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.price {
+  color: #292929;
+}
+
+.addButton {
+  background-color: #F5F5F5;
+  border: 2px solid orange;
+  border-radius: 5px;
 }
