Fixed some colors

--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 
 /*Add to Cart styles*/
 .added {
-  background-color: #1CC309 !important;
+  background-color: #18A708 !important;
   border:2px solid green;
   transition: all 0.5s;
 }
